--- a/accodion.html
+++ b/accodion.html
@@ -1,118 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>calculator</title>
-  </head>
-  <style>
-    .display_none {
-      display: none;
-    }
-  </style>
-  <body class="">
-    <div
-      class="vh-100 w-100 d-flex flex-column justify-content-center align-items-center"
-    >
-      <div class="container">
-        <section class="min-vh-100 d-flex flex-column justify-content-center">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-12 col-lg-8">
-                <div
-                  class="shadow-lg p-3 accordion br_10"
-                  onclick="handleAccorion(0)"
-                >
-                  <div class="p-3 border br_10" id="accordian_main">
-                    <h4>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet" />
+  <link rel="icon"
+    href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU">
+  <title>calculator</title>
+</head>
+<style>
+  .display_none {
+    display: none;
+  }
+</style>
+
+<body class="">
+  <div class="vh-100 w-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="container">
+      <section class="min-vh-100 d-flex flex-column justify-content-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-8">
+              <div class="shadow-lg p-3 accordion br_10" onclick="handleAccorion(0)">
+                <div class="p-3 border br_10" id="accordian_main">
+                  <h4>
+                    Voluptatum excepturi similique perferendis consectetur
+                    accusamus vero
+                  </h4>
+
+                  <div class="accordian_child">
+                    <h6>
                       Voluptatum excepturi similique perferendis consectetur
                       accusamus vero
-                    </h4>
-
-                    <div class="accordian_child">
-                      <h6>
-                        Voluptatum excepturi similique perferendis consectetur
-                        accusamus vero
-                      </h6>
-                    </div>
+                    </h6>
                   </div>
                 </div>
-                <div
-                  class="shadow-lg p-3 accordion br_10 mt-2"
-                  onclick="handleAccorion(1)"
-                >
-                  <div class="p-3 border br_10" id="accordian_main2">
-                    <h4>Voluptatum excepturi similique perferendis</h4>
+              </div>
+              <div class="shadow-lg p-3 accordion br_10 mt-2" onclick="handleAccorion(1)">
+                <div class="p-3 border br_10" id="accordian_main2">
+                  <h4>Voluptatum excepturi similique perferendis</h4>
 
-                    <div class="accordian_child">
-                      <h6>
-                        Voluptatum excepturi similique perferendis consectetur
-                        accusamus vero
-                      </h6>
-                    </div>
+                  <div class="accordian_child">
+                    <h6>
+                      Voluptatum excepturi similique perferendis consectetur
+                      accusamus vero
+                    </h6>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </div>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+  </div>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      const accordianChild = document.querySelectorAll(".accordian_child");
-      const accordion = document.querySelectorAll(".accordion");
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script>
+    const accordianChild = document.querySelectorAll(".accordian_child");
+    const accordion = document.querySelectorAll(".accordion");
 
-      function handleAccorion(number) {
-        for (let i = 0; i < accordion.length; i++) {
-          if (number === i) {
-            accordion[i].addEventListener("click", function () {
-              accordianChild[i].classList.toggle("display_none");
-            });
-          }
+    function handleAccorion(number) {
+      for (let i = 0; i < accordion.length; i++) {
+        if (number === i) {
+          accordion[i].addEventListener("click", function () {
+            accordianChild[i].classList.toggle("display_none");
+          });
         }
       }
-      //   getAccordianItem.addEventListener("click", function () {
-      //     console.log(accordianChild.classList);
-      //     accordianChild.classList.toggle("d-none");
-      //   });
-      //   getAccordianItem2.addEventListener("click", function () {
-      //     accordianChild2.classList.toggle("d-none");
-      //   });
-    </script>
-  </body>
+    }
+    //   getAccordianItem.addEventListener("click", function () {
+    //     console.log(accordianChild.classList);
+    //     accordianChild.classList.toggle("d-none");
+    //   });
+    //   getAccordianItem2.addEventListener("click", function () {
+    //     accordianChild2.classList.toggle("d-none");
+    //   });
+  </script>
+</body>
+
 </html>
