task app ui created

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,6 +12,7 @@
   <link rel="icon"
     href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU">
   <title>Hello, world!</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
