--- a/sidebar.html
+++ b/sidebar.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="position-relative overflow-hidden d-flex">
-        <div class="sidebar">
+        <div class="sidebar d-none">
             <div class="">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <p class="mb-0">
