--- a/sidebar.html
+++ b/sidebar.html
@@ -1,62 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon"
-        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU"
+    />
     <title>Sidebar</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="position-relative overflow-hidden d-flex">
-        <div class="sidebar d-none">
-            <div class="">
-                <div class="d-flex justify-content-between align-items-center mb-4">
-                    <p class="mb-0">
-                        Sidebar
-                    </p>
-                    <div class="cursor-pointer">
-                        <img class="br_50" width="20px"
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRC5a3VwQqDO7DMblFT1XzaOzpFx3nQDrbdvQ&usqp=CAU"
-                            alt="">
-                    </div>
-                </div>
-                <button class="btn_sidebar w-100 d-block mt-2">
-                    Link 1
-                </button>
-                <button class="btn_sidebar w-100 d-block mt-2">
-                    Link 2
-                </button>
-                <button class="btn_sidebar w-100 d-block mt-2">
-                    Link 3
-                </button>
-                <button class="btn_sidebar w-100 d-block mt-2">
-                    Link 4
-                </button>
+      <div id="sidebar-overlay"></div>
+      <div class="sidebar">
+        <div>
+          <div class="d-flex justify-content-between align-items-center mb-4">
+            <p class="mb-0">Sidebar</p>
+            <div class="cursor-pointer" id="close-sidebar">
+              <img
+                class="br_50"
+                width="20px"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRC5a3VwQqDO7DMblFT1XzaOzpFx3nQDrbdvQ&usqp=CAU"
+                alt="cross"
+              />
             </div>
+          </div>
+          <button class="btn_sidebar w-100 d-block mt-2">Link 1</button>
+          <button class="btn_sidebar w-100 d-block mt-2">Link 2</button>
+          <button class="btn_sidebar w-100 d-block mt-2">Link 3</button>
+          <button class="btn_sidebar w-100 d-block mt-2">Link 4</button>
         </div>
-        <div class="container d-flex flex-column justify-content-center align-items-center vh-100 w-100">
-            <h2>
-                Sidebar
-            </h2>
-            <div class="pt-2">
-                <button class="btn_sidebar"> Open Sidebar</button>
-            </div>
+      </div>
+      <div
+        class="container d-flex flex-column justify-content-center align-items-center vh-100 w-100"
+      >
+        <h2>Sidebar</h2>
+        <div class="pt-2">
+          <button class="btn_sidebar" id="open-sidebar-btn">
+            Open Sidebar
+          </button>
         </div>
+      </div>
     </div>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    <script>
+      //   const sidebarButton = document.querySelectorAll("#open-sidebar-btn");
+      //   const sidebarButton = document.querySelectorAll("#open-sidebar-btn");
+      //   const sidebarButton2 = document.getElementById("open-sidebar-btn");
+      //   console.log(sidebarButton, "sidebarButton");
+
+      const body = document.getElementsByTagName("body");
+      const sidebarOverlay = document.getElementById("sidebar-overlay");
+      const closeSidebarBtn = document.getElementById("close-sidebar");
+      const sidebarBtn = document.getElementById("open-sidebar-btn");
+      const sidebar = document.getElementsByClassName("sidebar");
+
+      //  FOR OPEN SIDEBAR WITH OVERLAY
+      sidebarBtn.addEventListener("click", function () {
+        body[0].classList.add("active-sidebar");
+        // sidebarOverlay.style.width = "100%";
+        // HERE  WE CHANGE LEFT VALUE OF SIDEBAR
+        // sidebar[0].style.left = 0;
+      });
+
+      closeSidebarBtn.addEventListener("click", function () {
+        closeSidebar();
+      });
+
+      sidebarOverlay.addEventListener("click", function () {
+        closeSidebar();
+      });
+
+      function closeSidebar() {
+        body[0].classList.remove("active-sidebar");
+        // sidebar[0].style.left = "-250px";
+        // sidebarOverlay.style.width = "0%";
+      }
     </script>
-</body>
-
+  </body>
 </html>
