sidebar title changed

--- a/sidebar.html
+++ b/sidebar.html
@@ -17,7 +17,7 @@
       rel="icon"
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU"
     />
-    <title>Sidebar</title>
+    <title>SIDEBAR</title>
   </head>
 
   <body>
