--- a/taskApp.html
+++ b/taskApp.html
@@ -61,18 +61,21 @@
       const taskList = document.getElementById("task-list");
 
       addTaskInput.addEventListener("change", function () {
-        // console.log(addTaskInput.current.value, "addTaskInput");
+        console.log(addTaskInput.value, "addTaskInput");
       });
 
       addTaskButton.addEventListener("click", function () {
         console.log("click", addTaskInput.value);
-        taskArray.push(addTaskInput.value);
-        console.log(taskArray, "taskArray");
-        printTaskList(taskArray);
+        if (addTaskInput.value !== "") {
+          taskArray.unshift(addTaskInput.value);
+          console.log(taskArray, "taskArray");
+          printTaskList(taskArray);
+          addTaskInput.value = "";
+        }
       });
 
       function printTaskList(taskArray) {
-        taskList.innerHTML += taskArray.map(
+        taskList.innerHTML = taskArray.map(
           (obj, index) => `<div
                 class="border px-3 py-3 br_10 d-flex justify-content-between align-items-center mb-3"
               >
