--- a/tabs.html
+++ b/tabs.html
@@ -35,6 +35,9 @@
                             reiciendis
                             optio assumenda ullam sequi ex asperiores alias architecto voluptas similique itaque, sit
                             numquam
+                            voluptatibus saepe voluptates. optio assumenda ullam sequi ex asperiores alias architecto
+                            voluptas similique itaque, sit
+                            numquam
                             voluptatibus saepe voluptates.
                         </h5>
                     </div>
@@ -53,6 +56,13 @@
                     <div id="text_three" class="d-none">
                         <h5>
                             THREE
+                        </h5>
+                        <h5>
+                            or sit amet consectetur adipisicing elit. Tempora odit quos recusandae ad,
+                            reiciendis
+                            optio assumenda ullam sequi ex asperiores alias architecto voluptas similique itaque, sit
+                            numquam
+                            voluptatibus saepe voluptates.
                         </h5>
                         <h5>
                             or sit amet consectetur adipisicing elit. Tempora odit quos recusandae ad,
