--- a/quiz.html
+++ b/quiz.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 border_gray br_10 py-4 px-md-4 text-center">
+            <div class="col-md-6 border_gray br_10 py-4 px-md-4 text-center d-none">
                 <img style="max-width: 465px;" class="w-100 mx-auto" src="./prize.png" alt="prize">
                 <h2 class="text-center ">
                     0/10
